# Sustainable-Food-Supply-Chain

./: .env  .gitignore  .pylintrc  Funzionamento applicazione.txt  LICENSE  README.md  avvia_applicazione.bat  package.json  pyproject.toml  requirements.txt
off_chain/: backend.py  blockchain_manager.py  firma.html  firma_accetta_token.html  firma_azione.html  firma_azione_compensativa.html  firma_operazione.html  firma_richiesta_token.html  gui_manager.py  main.py  mainxfirma.py  query_main.py  register_company.js  session.py
off_chain/configuration/: database.py  db_connection_setting.py  db_load_setting.py  db_setting.yaml  log_load_setting.py  log_setting.yaml
off_chain/database/: assign_hardhat_accounts.py  db_migrations.py  register_companies_on_blockchain.py  run_migrations.py
off_chain/enforcement/: __init__.py  guarantee_response_enforcer.py  safety_enforcer.py
off_chain/migration/: migrations.py
off_chain/model/: certification_for_lotto.py  certification_model.py  company_model.py  compensation_action_model.py  componente_model.py  credential_model.py  info_product_for_choice_model.py  lotto_composizione_model.py  (+10 more)
on_chain/: .solhint.json  README.md  SustainableFoodChain_abi.json  automated_deployment.py  contract_abi.json  contract_address.json  contract_addresses_backup_20250517_195518.json  contract_addresses_backup_20250517_195827.json  contract_addresses_backup_20250517_201341.json  contract_addresses_backup_20250517_232804.json  deploy_contract.py  hardhat.config.js  interact_contract.py  interact_counter.py  package.json  package.json.new
(+86 files in other folders)
